# Video-Summarizer

./: .env.sample  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
