[project]
name = "video-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.6.2",
    "duckduckgo-search>=8.0.4",
    "google-genai>=1.20.0",
    "google-generativeai>=0.8.5",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.1",
]
